# allica

./: .env.example  .gitignore  README.md  requirements.txt
solution/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
solution/allica/: __init__.py  cli.py
solution/allica/api/: app.py
solution/allica/core/: constants.py  enrichment.py  logging_setup.py  paths.py  patterns.py  pipeline.py  registry.py  routing.py  schemas.py  sectors.py  text_utils.py
solution/allica/core/eligibility/: __init__.py  assessor.py  rules.py
solution/allica/core/email/: __init__.py  composer.py  context.py  prompt.py  template.py
solution/allica/core/safety/: __init__.py  cta.py  input_scanner.py  rules.py  sanitiser.py
solution/allica/core/scoring/: __init__.py  banding.py  features.py  keywords.py  scorer.py
solution/allica/core/validation/: __init__.py  cleaning.py  (+3 more)
solution/allica/services/: __init__.py  override_service.py  run_service.py
solution/allica/storage/: __init__.py  config.py  engine.py  hashing.py  models.py  redaction.py  repositories.py
solution/allica/tests/: conftest.py  eval_runner.py  test_composer.py  test_pipeline.py  test_safety.py  test_storage_api.py  test_validation.py
solution/frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json
solution/migrations/: env.py
solution/migrations/versions/: 20260511_9690788a9b50_initial_schema.py
solution/scripts/: run_pipeline.sh  serve.sh  use_env.sh
(+47 files in other folders)
