[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allica-gtm"
version = "0.1.0"
description = "Allica GTM Assistant — inbound lead triage, scoring and first-touch drafting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = ["openai>=1.30.0"]
gemini = ["google-genai>=0.3.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
allica = "allica.cli:main"

[tool.setuptools.packages.find]
include = ["allica*"]

[tool.setuptools.package-data]
"allica.ui" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["allica/tests"]
